--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -2,15 +2,21 @@
 <html>
 
 <head>
-    <title>My Test Extension Options</title>
+    <title>Session Quicksave Extension</title>
     <!-- IMPORTANT: Since ionic web components are only stub files and will be lazy loaded on demand, 
         they can't be bundled with webpack or rollup easily in a vanilla js/ts project at this time. 
 
         So I'm forced to include ionic from a cdn here and add the appropriate security exceptions in manifest.json
+
+        Update: 
+        Adding 
+            "content_security_policy": "script-src 'self'  https://cdn.jsdelivr.net; object-src 'self'",
+        to manifest.json allows ionic to be imported, but then the bundled files by rollup get problems when loading. 
+        So I OMIT ionic for now and simply use default html5 tags.
     -->
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" /> -->
 
     <!-- Import own ts file -->
     <script type="module" src="options.main.ts"></script>
@@ -18,7 +24,12 @@
 
 <body>
 
-    <ion-button>Test ionic button</ion-button>
+    <div id="react-root">
+
+    </div>
+
+    <label for="defaultSessionsFolderInput">Default Sessions Folder:</label>
+    <input type="text" id="defaultSessionsFolderInput">
 
     Favorite color:
     <select id="color">
