try to use material-ui/core in a chrome extension

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -20,6 +20,8 @@
 
     <!-- Import own ts file -->
     <script type="module" src="options.main.ts"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
 <body>
@@ -28,10 +30,7 @@
 
     </div>
 
-    <label for="defaultSessionsFolderInput">Default Sessions Folder:</label>
-    <input type="text" id="defaultSessionsFolderInput">
-
-    Favorite color:
+    <!-- Favorite color:
     <select id="color">
         <option value="red">red</option>
         <option value="green">green</option>
@@ -42,7 +41,7 @@
     <label>
         <input type="checkbox" id="like">
         I like colors.
-    </label>
+    </label> -->
 
     <div id="status"></div>
     <button id="save">Save</button>
