--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -25,26 +25,7 @@
 </head>
 
 <body>
-
-    <div id="react-root">
-
-    </div>
-
-    <!-- Favorite color:
-    <select id="color">
-        <option value="red">red</option>
-        <option value="green">green</option>
-        <option value="blue">blue</option>
-        <option value="yellow">yellow</option>
-    </select>
-
-    <label>
-        <input type="checkbox" id="like">
-        I like colors.
-    </label> -->
-
-    <div id="status"></div>
-    <button id="save">Save</button>
+    <div id="react-root"> </div>
 </body>
 
 </html>
