add custom elements build target for stencil to avoid lazy loading components

--- a/src/chrome/options-page/index.html
+++ b/src/chrome/options-page/index.html
@@ -10,8 +10,8 @@
   <meta name="theme-color" content="#16161d">
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script type="module" src="/build/app.esm.js"></script>
-  <script nomodule src="/build/app.js"></script>
+  <script type="module" src="./import-stencil-components.js"></script>
+  <!-- <script nomodule src="/components/app.js"></script> -->
   <link href="/build/app.css" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="/assets/img/icon-16.png">
